fix: hide summary marker on safari

--- a/src/components/check-filter.module.css
+++ b/src/components/check-filter.module.css
@@ -36,6 +36,10 @@
   color: transparent;
 }
 
+.filter summary::-webkit-details-marker {
+  display: none;
+}
+
 .summary {
   display: flex;
   align-items: center;
